@@ -56,6 +56,10 @@ Fixed bug where phpVirtualBox would try to pre-load images that do
 not exist - causing 404 errors in web server logs.
 http://code.google.com/p/phpvirtualbox/issues/detail?id=396
 
+Added host memory usage information when the VirtualBox host is
+selected in the VM list.
+http://code.google.com/p/phpvirtualbox/issues/detail?id=402
+
 -------------------------------------
 	4.1-2	2011-8-21
 -------------------------------------
